syntax = "proto3";
option go_package = "code-analyser/protos/pb/output/global";
import "protos/output/global/command.proto";

message StartUpCommandsOutput{
  // check startUpCommands
  bool used = 1;
  // list of all startUpCommands
  repeated Command startUpCommands = 2;
}

