syntax = "proto3";
option go_package = "./protos/outputs/global";
message MakefileOutput{
  bool used=1;

}

