syntax = "proto3";
package proto;
option go_package = "code-analyser/protos/pb/plugin";

import "protos/helpers/common.proto";
import "protos/output/globalFiles/dockerfile.proto";
import "protos/output/globalFiles/dockercompose.proto";

service DockerFile {
  rpc DetectDockerFiles(protos.helpers.StringInput) returns (protos.output.globalFiles.DockerFile);
  rpc DetectDockerComposeFiles(protos.helpers.StringInput) returns (protos.output.globalFiles.DockerCompose);
}
